# Rollercoaster

./: CMakeLists.txt  main.cpp  peak_detector.cpp  peak_detector.h  test_main.cpp
rollercoaster/: plot.m
